python-apt (0.8.3ubuntu9) UNRELEASED; urgency=low

  * utils/get_ubuntu_mirrors_from_lp.py: move this script to python3
  * pre-build.sh: call dpkg-checkbuilddeps with the list of our 
    source-build-dependencies; this may save someone else an hour down the
    line scratching their head over gratuitous test-suite failures...

 -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 11 Jun 2012 13:48:06 -0700

python-apt (0.8.3ubuntu8) quantal; urgency=low

  * data/templates/Ubuntu.info.in:
    - add quantal

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 02 May 2012 21:09:05 -0400

python-apt (0.8.3ubuntu7) precise; urgency=low

  [ Michael Vogt ]
  * python/cache.cc:
    - ensure that pkgApplyStatus is called when the cache is opened
      Thanks to Sebastian Heinlein for finding this bug, providing a fix
      and adding a regression test, LP: #659438

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 18 Apr 2012 10:26:06 +0200

python-apt (0.8.3ubuntu6) precise; urgency=low

  * apt/cache.py:
    - fix _have_multi_arch flag (thanks to Sebastian Heinlein) LP: #966916

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 Apr 2012 14:33:50 +0200

python-apt (0.8.3ubuntu5) precise; urgency=low

  [ Michael Vogt ]
  * apt/package.py:
    - if there is no Version.uri return None

  [ Julian Andres Klode ]
  * python/apt_pkgmodule.cc:
    - Fix apt_pkg.Dependency.TYPE_RECOMMENDS, had Suggests value previously

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Mar 2012 13:34:19 +0200

python-apt (0.8.3ubuntu4) precise; urgency=low

  * doc/examples/build-deps.py:
    - update the build-deps.py example to use the apt API more
  * add support for apt_pkg.Policy.get_priority(PkgFileIterator)
  * apt/debfile.py:
    - use apt_inst for reading the control_filelist
  * debian/control:
    - remove no longer needed dependency on python-debian
  * tests/test_tagfile.py:
    - add test for apt_pkg.TagFile() both for compressed/uncompressed
      files